Feature: Implementación del header

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="h-full bg-gray-100">
 <head>
   <meta charset="utf-8">
-  <title>Moviesapp</title>
+  <title>Movies App</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://uploads-ssl.webflow.com/60ad08a30391b132d2353be0/60bf656d8e7d7ae889197576_Icon256.png">
 </head>
-<body>
+<body class="h-full">
   <app-root></app-root>
 </body>
 </html>
