--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="es" class="h-full bg-gray-200">
+<html lang="es" class="h-full bg-gray-200 scrollbar">
 <head>
   <meta charset="utf-8">
   <title>Movies App</title>
