Feature: Implementar agregar o eliminar pelicula de la watchlist, agregar librería de animaciones

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,14 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="https://uploads-ssl.webflow.com/60ad08a30391b132d2353be0/60bf656d8e7d7ae889197576_Icon256.png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
 </head>
 <body class="h-full">
   <app-root></app-root>
+  <script src="./assets/libs/animation/wow.min.js"></script>
+  <script>
+    new WOW().init();
+  </script>
 </body>
 </html>
